Export java.desktop/sun.awt to all unnamed modules
This is required in order for JOGL to work.
It's ugly, I know. But right now, there doesn't seem to exist a better
solution. Let's hope it doesn't break anytime soon...